<resources>
    <string name="app_name">Kreative Challenge</string>

    <string name="add_challenge">Add Challenge</string>

    <string name="add_name">Name</string>

    <string name="add_description">Description</string>

    <string name="btn_add">Add</string>

    <!--For activity_login-->
    <string name="enter_name">Enter Name</string>
    <string name="enter_surname">Enter Surname</string>
    <string name="btn_submit">Submit</string>

    <!--For activity_info_challenge-->
    <string name="btn_part">Participated</string>
    <string name="rate_challenge">Rate the Challenge</string>
    <string name="btn_complete">Complete</string>

    <string-array name="rating">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
