<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/colorLogin">

    <EditText
        android:id="@+id/add_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_name"
        android:inputType="textCapSentences"/>

    <EditText
        android:id="@+id/add_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_description"
        android:maxLines="5"
        android:inputType="textCapSentences"/>

    <EditText
        android:id="@+id/add_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Latitude"
        android:maxLines="5"
        android:visibility="gone"
        android:inputType="textCapSentences"/>

    <EditText
        android:id="@+id/add_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Longitude"
        android:visibility="gone"
        android:maxLines="5"
        android:inputType="textCapSentences"/>


    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_add"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorLogin"/>

</LinearLayout>